--- a/CSS/home.css
+++ b/CSS/home.css
@@ -73,7 +73,7 @@ li.dropdown {
 footer {
 	background-color: #303030;
 	color: #bfbfbf;
-	margin-top: 50px;
+	margin-top: 100px;
 	border-radius: 15px;
 	box-shadow: 0 0 10px 1px white;
 }
@@ -133,4 +133,10 @@ hr {
 	width: 60%;
 	border-width: 1px;
 	border-radius: 15px;
+}
+
+/* CSS class for fade-in transition */
+.fade-in {
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
 }
